Ch 17 OOP - refeed

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
@@ -316,7 +316,7 @@
     "\n",
     "In Chapter 8, we mentioned that one limitation of `vectors` is :  \n",
     "\n",
-    "-that they can store elements of only one type.  \n",
+    "- that they can store elements of only one type.  \n",
     "\n",
     "We created a workaround in Listing 8-9 where we : \n",
     "\n",
@@ -325,15 +325,17 @@
     "\n",
     "This meant we could store different types of data in each cell and still  \n",
     "have a vector that represented a row of cells. This is a perfectly good solution  \n",
-    "when our interchangeable items are a `fixed set of types` that we `know` when our  \n",
-    "code is `compiled`.\n",
+    "when our interchangeable items are a `fixed set of types` that we `know` when  \n",
+    "our code is `compiled`.\n",
     "\n",
     "However, sometimes we want our library user to be able to extend the set of  \n",
     "types that are valid in a particular situation. To show how we might achieve  \n",
     "this, we’ll create an example graphical user interface (GUI) tool that :  \n",
     "\n",
-    "- iterates through a list of items,  \n",
-    "- calling a draw method on each one to draw it to the screen \n",
+    "- `iterates` through a list of `items`,  \n",
+    "- calling a `draw` method `on each` one to draw it to the screen \n",
+    "\n",
+    "#### -- GUI Components Collection of Types With Common `Draw` --\n",
     "\n",
     "A common technique for GUI tools. We’ll create a library crate called gui that  \n",
     "contains the structure of a GUI library. This crate might include some types for  \n",
@@ -341,8 +343,8 @@
     "\n",
     "In addition, gui users will want to create their own types that can be drawn: \n",
     "\n",
-    "- for instance, one programmer might add an Image and \n",
-    "- another might add a SelectBox.\n",
+    "- for instance, one programmer might add an `Image` and \n",
+    "- another might add a `SelectBox`.\n",
     "\n",
     "We won’t implement a fully fledged GUI library for this example but will show  \n",
     "how the pieces would fit together. At the time of writing the library, we can’t  \n",
@@ -352,12 +354,22 @@
     "doesn’t need to know exactly what will happen when we call the draw method, just  \n",
     "that the value will have that method available for us to call.\n",
     "\n",
-    "To do this in a language with inheritance, we might define a class named  \n",
-    "Component that has a method named draw on it. The other classes, such as  \n",
-    "Button, Image, and SelectBox, would inherit from Component and thus inherit the  \n",
-    "draw method. They could each override the draw method to define their custom  \n",
-    "behavior, but the framework could treat all of the types as if they were  \n",
-    "Component instances and call draw on them.  \n",
+    "#### -- GUI Blueprint using Traditional Inheritence --\n",
+    "\n",
+    "To do this in a language with inheritance, we might :  \n",
+    "\n",
+    "- define a class named `Component`  \n",
+    "- that has a method named `draw` on it.  \n",
+    "\n",
+    "The other classes, such as `Button`, `Image`, and `SelectBox`, would :  \n",
+    "\n",
+    "- inherit from `Component` and  \n",
+    "- thus inherit the `draw` method.  \n",
+    "- They could each `override` the `draw` method to define their custom  \n",
+    "behavior,  \n",
+    "- but the framework could treat all of the types as if they were `Component`  \n",
+    "instances and  \n",
+    "- call `draw` on them.  \n",
     "\n",
     "But because Rust doesn’t have inheritance, we need another way to structure the  \n",
     "gui library to allow users to extend it with new types."
@@ -369,28 +381,46 @@
    "source": [
     "### Defining a Trait for Common Behaviour\n",
     "\n",
-    "To implement the behavior we want gui to have, we’ll define a trait named Draw  \n",
-    "that will have one method named draw. Then we can define a vector that takes a  \n",
-    "trait object. A trait object points to both an instance of a type implementing  \n",
-    "our specified trait and a table used to look up trait methods on that type at  \n",
-    "runtime. We create a trait object by specifying some sort of pointer, such as  \n",
-    "a & reference or a Box<T> smart pointer, then the dyn keyword, and then  \n",
-    "specifying the relevant trait. (We’ll talk about the reason trait objects must  \n",
-    "use a pointer in Chapter 19 in the section  \n",
-    "“Dynamically Sized Types and the Sized Trait.”)  \n",
+    "To implement the behavior we want gui to have, we’ll :  \n",
     "\n",
-    "We can use trait objects in place of a generic or concrete type. Wherever we  \n",
-    "use a trait object, Rust’s type system will ensure at compile time that any  \n",
-    "value used in that context will implement the trait object’s trait.  \n",
-    "Consequently, we don’t need to know all the possible types at compile time.\n",
+    "- define a `trait named Draw` \n",
+    "- that will have one `method named draw`.  \n",
     "\n",
-    "We’ve mentioned that, in Rust, we refrain from calling structs and enums  \n",
-    "“objects” to distinguish them from other languages’ objects. In a struct or  \n",
-    "enum, the data in the struct fields and the behavior in impl blocks are  \n",
-    "separated, whereas in other languages, the data and behavior combined into one  \n",
+    "Then we can define a `vector` that takes a `trait object`.  \n",
+    "\n",
+    "A `trait object` points to both :  \n",
+    "\n",
+    "- an `instance` of a type implementing our specified `trait` and  \n",
+    "- a `table` used to look up `trait methods` on that type at `runtime`.  \n",
+    "\n",
+    "We create a `trait` object by :  \n",
+    "\n",
+    "- specifying some sort of pointer, such as a `&` reference or a `Box<T>` smart  \n",
+    "pointer,  \n",
+    "- then the `dyn` keyword,  \n",
+    "- and then specifying the relevant `trait`.  \n",
+    "\n",
+    "(We’ll talk about the reason trait objects must use a pointer in Chapter 19 in  \n",
+    "the section **`“Dynamically Sized Types and the Sized Trait.”`**)  \n",
+    "\n",
+    "We can use `trait objects` in place of :  \n",
+    "\n",
+    "- a generic or \n",
+    "- concrete type.  \n",
+    "\n",
+    "Wherever we use a `trait object`, Rust’s type system will ensure at `compile`  \n",
+    "time that any value used in that context will implement the trait object’s  \n",
+    "`trait`. Consequently :  \n",
+    "\n",
+    "- we don’t need to know all the possible types at compile time.\n",
+    "\n",
+    "We’ve mentioned that, in Rust, we refrain from calling `structs` and `enums`  \n",
+    "“objects” to distinguish them from other languages’ objects. In a `struct` or   \n",
+    "`enum`, the data in the `struct fields` and the `behavior in impl blocks` are  \n",
+    "separated, whereas in other languages, the data and behavior combined into one   \n",
     "concept is often labeled an object. \n",
     "\n",
-    "However, trait objects are more like objects in other languages in the sense  \n",
+    "However, `trait objects` are more like objects in other languages in the sense  \n",
     "that they : \n",
     "\n",
     "- combine data and behavior.  \n",
@@ -405,7 +435,7 @@
     "\n",
     "Listing 17-3 shows how to define a trait named Draw with one method named draw:\n",
     "\n",
-    "Filename: src/lib.rs"
+    "> Filename: src/lib.rs"
    ]
   },
   {
@@ -442,13 +472,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Listing 17-3: Definition of the Draw trait\n",
+    "> Listing 17-3: Definition of the Draw trait\n",
     "\n",
-    "This syntax should look familiar from our discussions on how to define traits in  \n",
-    "Chapter 10. Next comes some new syntax: Listing 17-4 defines a struct named  \n",
-    "Screen that holds a vector named components. This vector is of type  \n",
-    "Box<dyn Draw>, which is a trait object; it’s a stand-in for any type inside a  \n",
-    "Box that implements the Draw trait.\n",
+    "This syntax should look familiar from our discussions on how to define `traits`  \n",
+    "in Chapter 10.  Next comes some new syntax: Listing 17-4 defines a :  \n",
+    "\n",
+    "- `struct` named `Screen` that  \n",
+    "- holds a `vector` named `components`.  \n",
+    "\n",
+    "This vector is of type `Box<dyn Draw>`, which is a `trait object`; it’s a  \n",
+    "stand-in for any type inside a `Box` that implements the `Draw trait`.\n",
     "\n",
     "> Filename: src/lib.rs"
    ]
@@ -475,6 +508,7 @@
     "    // this is dynamic dispatch - the exact method to call when Draw's methods  \n",
     "    // are invoked will be determined at runtime based on the actual type of  \n",
     "    // the data in the box.\n",
+    "    // @note : it's a stand-in for any type inside Box that impls Draw trait\n",
     "    pub components: Vec<Box<dyn Draw>>,\n",
     "}"
    ]
@@ -483,11 +517,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Listing 17-4: Definition of the Screen struct with a components field holding a  \n",
-    "vector of trait objects that implement the Draw trait\n",
+    "Listing 17-4: Definition of the `Screen` `struct` with a components field  \n",
+    "holding a vector of `trait objects` that implement the `Draw trait`\n",
     "\n",
-    "On the Screen struct, we’ll define a method named run that will call the draw  \n",
-    "method on each of its components, as shown in Listing 17-5:\n",
+    "On the `Screen` struct, we’ll :  \n",
+    "\n",
+    "- define a method named `run` that will  \n",
+    "- call the `draw` method  \n",
+    "- on each of its `components`  \n",
+    "\n",
+    "as shown in Listing 17-5:\n",
     "\n",
     "> Filename: src/lib.rs"
    ]
