Ch 17 OOP - trait object refeed

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
@@ -388,10 +388,14 @@
     "\n",
     "Then we can define a `vector` that takes a `trait object`.  \n",
     "\n",
+    "#### -- Trait Object : Instance and Method LU Table @runtime --\n",
+    "\n",
     "A `trait object` points to both :  \n",
     "\n",
     "- an `instance` of a type implementing our specified `trait` and  \n",
     "- a `table` used to look up `trait methods` on that type at `runtime`.  \n",
+    "\n",
+    "#### -- Trait Object = `Box< dyn myTrait >` --\n",
     "\n",
     "We create a `trait` object by :  \n",
     "\n",
@@ -402,6 +406,8 @@
     "\n",
     "(We’ll talk about the reason trait objects must use a pointer in Chapter 19 in  \n",
     "the section **`“Dynamically Sized Types and the Sized Trait.”`**)  \n",
+    "\n",
+    "#### -- Trait Object => generic or concrete type --\n",
     "\n",
     "We can use `trait objects` in place of :  \n",
     "\n",
@@ -414,16 +420,22 @@
     "\n",
     "- we don’t need to know all the possible types at compile time.\n",
     "\n",
+    "#### -- Rust Enum and Struct : NO METHODS DATA ONLY --\n",
+    "\n",
     "We’ve mentioned that, in Rust, we refrain from calling `structs` and `enums`  \n",
     "“objects” to distinguish them from other languages’ objects. In a `struct` or   \n",
     "`enum`, the data in the `struct fields` and the `behavior in impl blocks` are  \n",
     "separated, whereas in other languages, the data and behavior combined into one   \n",
     "concept is often labeled an object. \n",
     "\n",
+    "#### -- Trait Objects : Impl method to Enum and Struct --\n",
+    "\n",
     "However, `trait objects` are more like objects in other languages in the sense  \n",
     "that they : \n",
     "\n",
     "- combine data and behavior.  \n",
+    "\n",
+    "#### -- Trait Objects : Can NOT add Data --\n",
     "\n",
     "But trait objects differ from traditional objects in that :  \n",
     "\n",
@@ -440,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -457,6 +469,8 @@
     "    // called on.\n",
     "    // (;) at the end of a function or method declaration in a trait has a  \n",
     "    // specific meaning : \n",
+    "    // @audit-ok : does (;) indicates no default impl and are abstract ONLY?\n",
+    "    // ANSWER : YES - all type impl this trait MUST PROVIDE their own impl\n",
     "    // - \"There will be a method called draw that takes a &self parameter, but  \n",
     "    // I'm not going to tell you what it does right now\"\n",
     "    // - The method is being declared as part of the trait's interface, but no  \n",
@@ -474,6 +488,8 @@
    "source": [
     "> Listing 17-3: Definition of the Draw trait\n",
     "\n",
+    "#### -- Box<dyn Draw> : Standin for any type in `Box` impl `Draw` --\n",
+    "\n",
     "This syntax should look familiar from our discussions on how to define `traits`  \n",
     "in Chapter 10.  Next comes some new syntax: Listing 17-4 defines a :  \n",
     "\n",
@@ -488,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -507,7 +523,8 @@
     "    // Draw trait. The dyn keyword is short for \"dynamic\", and it indicates that  \n",
     "    // this is dynamic dispatch - the exact method to call when Draw's methods  \n",
     "    // are invoked will be determined at runtime based on the actual type of  \n",
-    "    // the data in the box.\n",
+    "    // the data in the box -- @note Uses the runtime trait method lookup table!\n",
+    "\n",
     "    // @note : it's a stand-in for any type inside Box that impls Draw trait\n",
     "    pub components: Vec<Box<dyn Draw>>,\n",
     "}"
@@ -517,8 +534,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Listing 17-4: Definition of the `Screen` `struct` with a components field  \n",
+    "> Listing 17-4: Definition of the `Screen` `struct` with a components field  \n",
     "holding a vector of `trait objects` that implement the `Draw trait`\n",
+    "\n",
+    "#### -- Screen : impl `run` method => `draw` on all Draw traits --\n",
     "\n",
     "On the `Screen` struct, we’ll :  \n",
     "\n",
@@ -533,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -556,6 +575,7 @@
     "            // though each component might be a different type, they all  \n",
     "            // implement the Draw trait, so they all have a draw method\n",
     "            // - we can dynamically dispatch the draw method of each component\n",
+    "            // - using the Trait method lookup table @runtime\n",
     "            component.draw();\n",
     "        }\n",
     "    }\n",
@@ -569,21 +589,28 @@
     "> Listing 17-5: A run method on Screen that calls the draw method on each  \n",
     "component\n",
     "\n",
-    "This works differently from defining a struct that uses a generic type parameter  \n",
-    "with trait bounds. A generic type parameter can :  \n",
-    "- only be substituted with one concrete type at a time, \n",
-    "- whereas trait objects allow for multiple concrete types to fill in for the  \n",
-    "trait object at runtime.  \n",
+    "#### -- Trait Object vs Generic Type w/Trait Bound ? --\n",
     "\n",
-    "For example, we could have defined the Screen struct using a generic type and a  \n",
-    "trait bound as in Listing 17-6:\n",
+    "This works differently from defining a `struct` that : \n",
+    "\n",
+    "- uses a `generic type` parameter  \n",
+    "- with trait bounds.  \n",
+    "\n",
+    "A `generic type` parameter can :  \n",
+    "\n",
+    "- only be `substituted with one concrete type` at a time, \n",
+    "- whereas `trait objects allow for multiple concrete types` to fill in for the  \n",
+    "trait object at `runtime`  \n",
+    "\n",
+    "For example, we could have defined the Screen `struct` using a `generic type`  \n",
+    "and a trait bound as in Listing 17-6:\n",
     "\n",
     "> Filename: src/lib.rs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -606,6 +633,9 @@
     "    T: Draw, \n",
     "{\n",
     "    pub fn run(&self) {\n",
+    "        // All components are of one single HOMOGENOUS type T\n",
+    "        // - we can't call `draw` on a list of components of different types\n",
+    "        // - i.e. Button, TextField, Slider ..etc\n",
     "        for component in self.components.iter() {\n",
     "            component.draw();\n",
     "        }\n",
@@ -619,16 +649,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Listing 17-6: An alternate implementation of the Screen struct and its run  \n",
+    "> Listing 17-6: An alternate implementation of the Screen struct and its run  \n",
     "method using generics and trait bounds\n",
     "\n",
-    "This restricts us to a Screen instance that has a list of components all of  \n",
-    "type Button or all of type TextField. If you’ll only ever have homogeneous  \n",
-    "collections, using generics and trait bounds is preferable because the  \n",
-    "definitions will be monomorphized at compile time to use the concrete types.\n",
+    "#### -- Trait Bound : Homogeneous and Fully Compiled --\n",
     "\n",
-    "On the other hand, with the method using trait objects, one Screen instance can  \n",
-    "hold a Vec<T> that contains a `Box<Button>` as well as a `Box<TextField>`.  \n",
+    "This restricts us to a `Screen` instance that has a list of components all of  \n",
+    "type `Button` or all of type `TextField`.  \n",
+    "\n",
+    "If you’ll only ever have `homogeneous collections` :  \n",
+    "- using `generics and trait bounds` is preferable  \n",
+    "- because the definitions will be monomorphized `(inlined) at compile time` to  \n",
+    "use the concrete types.\n",
+    "\n",
+    "#### -- Trait Objects : Heterogeneous w/Table @runtime --\n",
+    "\n",
+    "On the other hand, with the method using `trait objects` one Screen instance  \n",
+    "can hold a `Vec<T>` that contains :  \n",
+    "\n",
+    "- a `Box<Button>` as well as  \n",
+    "- a `Box<TextField>`.  \n",
+    "\n",
     "Let’s look at how this works, and then we’ll talk about the runtime performance  \n",
     "implications."
    ]
@@ -637,13 +678,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implementing the Trait\n",
+    "### Implementing the `Trait`\n",
     "\n",
-    "Now we’ll add some types that implement the Draw trait. We’ll provide the Button  \n",
-    "type. Again, actually implementing a GUI library is beyond the scope of this  \n",
-    "book, so the draw method won’t have any useful implementation in its body. To  \n",
-    "imagine what the implementation might look like, a Button struct might have  \n",
-    "fields for width, height, and label, as shown in Listing 17-7:\n",
+    "Now we’ll add some types that implement the `Draw` trait. We’ll provide the  \n",
+    "`Button` type.  \n",
+    "\n",
+    "Again, actually implementing a GUI library is beyond the scope of this book, so :  \n",
+    "\n",
+    "- the draw method won’t have any useful implementation in its body.  \n",
+    "\n",
+    "To imagine what the implementation might look like, a `Button` struct might have  \n",
+    "fields for `width`, `height`, and `label`, as shown in Listing 17-7:\n",
     "\n",
     "> Filename: src/lib.rs"
    ]
@@ -677,20 +722,27 @@
    "source": [
     "> Listing 17-7: A Button struct that implements the Draw trait\n",
     "\n",
-    "The width, height, and label fields on Button will differ from the fields on  \n",
-    "other components; for example, a TextField type might have those same fields  \n",
-    "plus a placeholder field. Each of the types we want to draw on the screen will  \n",
-    "implement the Draw trait but will use different code in the draw method to  \n",
-    "define how to draw that particular type, as Button has here  \n",
-    "(without the actual GUI code, as mentioned).  \n",
+    "The `width`, `height`, and `label` fields on `Button` will differ from the  \n",
+    "fields on other components; for example :  \n",
     "\n",
-    "The Button type, for instance, might have an additional impl block containing  \n",
-    "methods related to what happens when a user clicks the button. These kinds of  \n",
-    "methods won’t apply to types like TextField.\n",
+    "- a `TextField` type might have those same fields plus a placeholder field  \n",
     "\n",
-    "If someone using our library decides to implement a SelectBox struct that has  \n",
-    "width, height, and options fields, they implement the Draw trait on the  \n",
-    "SelectBox type as well, as shown in Listing 17-8:\n",
+    "Each of the types we want to draw on the screen will :  \n",
+    "\n",
+    "- implement the `Draw trait` \n",
+    "- but will use different code in the `draw` method to define how to draw that \n",
+    "particular type  \n",
+    "- as `Button` has here (without the actual GUI code, as mentioned).  \n",
+    "\n",
+    "The `Button` type, for instance :  \n",
+    "\n",
+    "- might have an additional `impl block` containing  \n",
+    "- methods related to what happens when a user `clicks the button` \n",
+    "- These kinds of methods won’t apply to types like `TextField`\n",
+    "\n",
+    "If someone using our library decides to implement a `SelectBox struct` that has  \n",
+    "`width`, `height`, and `options` fields, they implement the `Draw trait` on the  \n",
+    "`SelectBox` type as well, as shown in Listing 17-8:\n",
     "\n",
     "> Filename: src/main.rs"
    ]
