Ch 17 - OOP - Transitions as Type xform

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_17_oop.ipynb
@@ -1766,10 +1766,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- Downsides of the State Pattern --\n",
+    "\n",
     "One downside of the state pattern is that :  \n",
     "\n",
     "- Because the states implement the transitions between states, \n",
     "- Some of the states are coupled to each other.  \n",
+    "\n",
+    "#### -- State Transitions are Coupled to the State Impl --\n",
     "\n",
     "If we add another state : \n",
     "\n",
@@ -1781,11 +1785,13 @@
     "addition of a new state, but that would mean switching to another design  \n",
     "pattern.\n",
     "\n",
+    "#### -- Duplicated Code Logic and Impl Methods --\n",
+    "\n",
     "Another downside is that we’ve duplicated some logic. To eliminate some of the  \n",
     "duplication, we might try to :  \n",
     "\n",
-    "- make default implementations for the `request_review` and `approve` methods on  \n",
-    "the `State` trait that return self;  \n",
+    "- make default implementations for the `request_review` and `approve`  \n",
+    "methods on the `State` trait that return self;  \n",
     "- however, this would violate object safety, because the trait doesn’t know  \n",
     "what the concrete self will be exactly.  \n",
     "\n",
@@ -1801,8 +1807,10 @@
     "\n",
     "By implementing the state pattern exactly as it’s defined for object-oriented  \n",
     "languages, we’re not taking as full advantage of Rust’s strengths as we could.  \n",
-    "Let’s look at some changes we can make to the blog crate that can make invalid  \n",
-    "states and transitions into compile time errors."
+    "Let’s look at some changes we can make to the blog crate that can :  \n",
+    "\n",
+    "- make invalid states and  \n",
+    "- transitions into compile time errors."
    ]
   },
   {
@@ -1824,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1918,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -1931,7 +1939,7 @@
      "text": [
       "thread '<unnamed>' panicked at 'assertion failed: `(left == right)`\n",
       "  left: `\"\"`,\n",
-      " right: `\"I ate a salad for lunch today\"`', src/lib.rs:112:5\n",
+      " right: `\"I ate a salad for lunch today\"`', src/lib.rs:107:5\n",
       "stack backtrace:\n",
       "   0: _rust_begin_unwind\n",
       "   1: core::panicking::panic_fmt\n",
@@ -1961,17 +1969,270 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We still enable the creation of new posts in the draft state using Post::new  \n",
-    "and the ability to add text to the post’s content. But instead of having a  \n",
-    "content method on a draft post that returns an empty string, we’ll make it so  \n",
-    "draft posts don’t have the content method at all. That way, if we try to get a  \n",
-    "draft post’s content, we’ll get a compiler error telling us the method doesn’t  \n",
-    "exist. As a result, it will be impossible for us to accidentally display draft  \n",
+    "- We still enable the creation of new posts in the draft state using `Post::new`  \n",
+    "- and the ability to add text to the post’s content. \n",
+    "\n",
+    "But instead of having :  \n",
+    "- a `content` method on a `draft` post that returns an `empty string`,  \n",
+    "- we’ll make it so `draft` posts don’t have the `content method` at all.  \n",
+    "- That way, if we try to get a  `draft post’s content`, we’ll get a compiler  \n",
+    "error telling us the method doesn’t exist.  \n",
+    "\n",
+    "As a result, it will be impossible for us to accidentally display draft  \n",
     "post content in production, because that code won’t even compile. Listing 17-19  \n",
-    "shows the definition of a Post struct and a DraftPost struct, as well as methods  \n",
-    "on each:\n",
+    "shows the definition of a `Post` struct and a `DraftPost` struct, as well as  \n",
+    "`methods` on each:\n",
     "\n",
     "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pub struct Post {\n",
+    "    content: String,\n",
+    "}\n",
+    "\n",
+    "pub struct DraftPost {\n",
+    "    content: String,\n",
+    "}\n",
+    "\n",
+    "impl Post {\n",
+    "    pub fn new() -> DraftPost {\n",
+    "        DraftPost {\n",
+    "            content: String::new(),\n",
+    "        }\n",
+    "    }\n",
+    "    pub fn content(&self) -> &str {\n",
+    "        &self.content\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "\n",
+    "impl DraftPost {\n",
+    "    pub fn add_text(&mut self, text: &str) {\n",
+    "        self.content.push_str(text);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Listing 17-19: A Post with a content method and a DraftPost without a content  \n",
+    "method\n",
+    "\n",
+    "Both the Post and DraftPost structs have a private content field that stores  \n",
+    "the blog post text. The structs no longer have the state field because we’re  \n",
+    "moving the encoding of the state to the types of the structs. The Post struct  \n",
+    "will represent a published post, and it has a content method that returns the  \n",
+    "content.\n",
+    "\n",
+    "We still have a Post::new function, but instead of returning an instance of  \n",
+    "Post, it returns an instance of DraftPost. Because content is private and there  \n",
+    "aren’t any functions that return Post, it’s not possible to create an instance  \n",
+    "of Post right now.\n",
+    "\n",
+    "The DraftPost struct has an add_text method, so we can add text to content as  \n",
+    "before, but note that DraftPost does not have a content method defined! So now  \n",
+    "the program ensures all posts start as draft posts, and draft posts don’t have  \n",
+    "their content available for display. Any attempt to get around these  \n",
+    "constraints will result in a compiler error."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementing Transitions as Transformations into Different Types\n",
+    "\n",
+    "So how do we get a published post? We want to enforce the rule that a draft  \n",
+    "post has to be reviewed and approved before it can be published. A post in the  \n",
+    "pending review state should still not display any content. Let’s implement  \n",
+    "these constraints by adding another struct, PendingReviewPost, defining the  \n",
+    "request_review method on DraftPost to return a PendingReviewPost, and defining  \n",
+    "an approve method on PendingReviewPost to return a Post, as shown in  \n",
+    "Listing 17-20:\n",
+    "\n",
+    "> Filename: src/lib.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// @audit - can't run this twice in a row, need to restart kernel\n",
+    "// - [E0592] Error: duplicate definitions with name `new`\n",
+    "impl DraftPost{\n",
+    "    pub fn add_text(&mut self, text: &str) {\n",
+    "        self.content.push_str(text);\n",
+    "    }\n",
+    "    // --snip--\n",
+    "    pub fn request_review(self) -> PendingReviewPost {\n",
+    "        PendingReviewPost {\n",
+    "            content: self.content,\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "pub struct PendingReviewPost {\n",
+    "    content: String,\n",
+    "}\n",
+    "\n",
+    "impl PendingReviewPost {\n",
+    "    pub fn approve(self) -> Post {\n",
+    "        Post {\n",
+    "            content: self.content,\n",
+    "        }\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Listing 17-20: A PendingReviewPost that :  \n",
+    "\n",
+    "- gets created by calling request_review on DraftPost and  \n",
+    "- an approve method that turns a PendingReviewPost into a published Post\n",
+    "\n",
+    "The request_review and approve methods take ownership of self, thus consuming  \n",
+    "the DraftPost and PendingReviewPost instances and transforming them into a  \n",
+    "PendingReviewPost and a published Post, respectively. This way, we won’t have  \n",
+    "any lingering DraftPost instances after we’ve called request_review on them,  \n",
+    "and so forth. The PendingReviewPost struct doesn’t have a content method  \n",
+    "defined on it, so attempting to read its content results in a compiler error,  \n",
+    "as with DraftPost. Because the only way to get a published Post instance that  \n",
+    "does have a content method defined is to call the approve method on a  \n",
+    "PendingReviewPost, and the only way to get a PendingReviewPost is to call the  \n",
+    "request_review method on a DraftPost, we’ve now encoded the blog post workflow  \n",
+    "into the type system.\n",
+    "\n",
+    "But we also have to make some small changes to main. The request_review and  \n",
+    "approve methods return new instances rather than modifying the struct they’re  \n",
+    "called on, so we need to add more let post = shadowing assignments to save the  \n",
+    "returned instances. We also can’t have the assertions about the draft and  \n",
+    "pending review posts’ contents be empty strings, nor do we need them: we can’t  \n",
+    "compile code that tries to use the content of posts in those states any longer.  \n",
+    "The updated code in main is shown in Listing 17-21:\n",
+    "\n",
+    "> Filename: src/main.rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// use blog::Post;\n",
+    "\n",
+    "{\n",
+    "    let mut post = Post::new();\n",
+    "\n",
+    "    post.add_text(\"I ate a salad for lunch today\");\n",
+    "\n",
+    "    let post = post.request_review();\n",
+    "\n",
+    "    let post = post.approve();\n",
+    "\n",
+    "    assert_eq!(\"I ate a salad for lunch today\", post.content());\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Listing 17-21: Modifications to main to use the new implementation of the blog  \n",
+    "post workflow\n",
+    "\n",
+    "The changes we needed to make to main to reassign post mean that this  \n",
+    "implementation doesn’t quite follow the object-oriented state pattern anymore:  \n",
+    "the transformations between the states are no longer encapsulated entirely  \n",
+    "within the Post implementation. However, our gain is that invalid states are  \n",
+    "now impossible because of the type system and the type checking that happens at  \n",
+    "compile time! This ensures that certain bugs, such as display of the content of  \n",
+    "an unpublished post, will be discovered before they make it to production.\n",
+    "\n",
+    "Try the tasks suggested at the start of this section on the blog crate as it is  \n",
+    "after Listing 17-21 to see what you think about the design of this version of  \n",
+    "the code. Note that some of the tasks might be completed already in this design.\n",
+    "\n",
+    "We’ve seen that even though Rust is capable of implementing object-oriented  \n",
+    "design patterns, other patterns, such as encoding state into the type system,  \n",
+    "are also available in Rust. These patterns have different trade-offs. Although  \n",
+    "you might be very familiar with object-oriented patterns, rethinking the  \n",
+    "problem to take advantage of Rust’s features can provide benefits, such as  \n",
+    "preventing some bugs at compile time. Object-oriented patterns won’t always be  \n",
+    "the best solution in Rust due to certain features, like ownership, that  \n",
+    "object-oriented languages don’t have."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summary\n",
+    "---\n",
+    "\n",
+    "No matter whether or not you think Rust is an object-oriented language after  \n",
+    "reading this chapter, you now know that you can use trait objects to get some  \n",
+    "object-oriented features in Rust. Dynamic dispatch can give your code some  \n",
+    "flexibility in exchange for a bit of runtime performance. You can use this  \n",
+    "flexibility to implement object-oriented patterns that can help your code’s  \n",
+    "maintainability. Rust also has other features, like ownership, that  \n",
+    "object-oriented languages don’t have. An object-oriented pattern won’t always  \n",
+    "be the best way to take advantage of Rust’s strengths, but is an available  \n",
+    "option.\n",
+    "\n",
+    "Next, we’ll look at patterns, which are another of Rust’s features that enable  \n",
+    "lots of flexibility. We’ve looked at them briefly throughout the book but  \n",
+    "haven’t seen their full capability yet. Let’s go!"
    ]
   }
  ],
